correction alignement photo

--- a/cvstyle.css
+++ b/cvstyle.css
@@ -55,7 +55,7 @@ h2, h3, h4, h5
 
 h2
 {
-	font-family: 'aileronsemibold';
+	font-family: 'aileronsemibold'
 	font-size: 1.8em;
 	
 }
